--- a/www/css/index.css
+++ b/www/css/index.css
@@ -1,4 +1,28 @@
-html, body {
+:root {
+  --background_color: white;
+  --text_color: black;
+}
+
+html,
+body {
   padding: 0;
   margin: 0;
+  color: var(--text_color);
+  background-color: var(--background_color);
+}
+
+#history {
+  position: relative;
+  width: 100%;
+  max-height: 200vh;
+  margin: 0;
+  box-sizing: border-box;
+  height: 9rem;
+}
+
+.histoblock {
+  position: relative;
+
+
+
 }
