--- a/www/css/index.css
+++ b/www/css/index.css
@@ -11,6 +11,14 @@ body {
   background-color: var(--background_color);
 }
 
+.viewpane{
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+}
+
 #history {
   position: relative;
   width: 100%;
