--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -63,6 +63,7 @@ body {
   position: fixed;
   bottom: 0.5rem;
   width: 90vw;
+  height: 2rem;
   left: 5vw;
   height: fit-content;
   background-color: rgb(0, 229, 255);
@@ -70,4 +71,20 @@ body {
   text-align: center;
   font-size: 1.7rem;
   border-radius: 0.4rem;
+}
+
+.speak_button_label{
+
+}
+
+.speak_button_icon{
+  height: 2rem;
+  width: 2rem;
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-image: url('../img/sound-pngrepo-com.png');
 }
