--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -2,7 +2,10 @@
   --background_color: white;
   --text_color: black;
 }
-
+@font-face {
+  src: url(../fonts/LexendDeca-Regular.ttf);
+  font-family: Lexend_Deca;
+}
 html,
 body {
   padding: 0;
@@ -63,9 +66,8 @@ body {
   position: fixed;
   bottom: 0.5rem;
   width: 90vw;
-  height: 2rem;
+  height: 4rem;
   left: 5vw;
-  height: fit-content;
   background-color: rgb(0, 229, 255);
   box-sizing: border-box;
   text-align: center;
@@ -74,12 +76,15 @@ body {
 }
 
 .speak_button_label{
-
+  line-height: auto;
+  text-align: center;
+  font-size: 2.3rem;
+  font-family: Lexend_Deca;
 }
 
 .speak_button_icon{
-  height: 2rem;
-  width: 2rem;
+  height: 4rem;
+  width: 4rem;
   position: absolute;
   top: 0;
   right: 0;
@@ -87,4 +92,5 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-image: url('../img/sound-pngrepo-com.png');
+
 }
