--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -2,10 +2,12 @@
   --background_color: white;
   --text_color: black;
 }
+
 @font-face {
   src: url(../fonts/LexendDeca-Regular.ttf);
   font-family: Lexend_Deca;
 }
+
 html,
 body {
   padding: 0;
@@ -66,7 +68,7 @@ body {
   position: fixed;
   bottom: 0.5rem;
   width: 90vw;
-  height: 4rem;
+  height: 3.5rem;
   left: 5vw;
   background-color: rgb(0, 229, 255);
   box-sizing: border-box;
@@ -75,16 +77,17 @@ body {
   border-radius: 0.4rem;
 }
 
-.speak_button_label{
+.speak_button_label {
   line-height: auto;
   text-align: center;
-  font-size: 2.3rem;
+  font-size: 2rem;
   font-family: Lexend_Deca;
+  width: calc(100% - 3.5rem);white-space: nowrap;
 }
 
-.speak_button_icon{
-  height: 4rem;
-  width: 4rem;
+.speak_button_icon {
+  height: 3.5rem;
+  width: 3.5rem;
   position: absolute;
   top: 0;
   right: 0;
