--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -68,10 +68,13 @@ body {
 
 #textput {
   position: relative;
+  all: unset;
   width: 95vw;
   margin-left: 2.5vw;
   margin-right: auto;
-  min-height: 5rem;
+  min-height: 11rem;
+  height: 13rem;
+  max-height: 15rem;
   font-size: 1.1rem;
   margin-top: 0.5rem;
   margin-bottom: 1rem;
