--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -108,7 +108,6 @@ body {
   height: 2rem;
   font-size: 1.2rem;
   width: 95%;
-  background-color: aquamarine;
   white-space: nowrap;
   font-size: Lexend_Deca;
 }
@@ -122,6 +121,15 @@ body {
   left: 0;
   font-size: 1.1rem;
   width: 100%;
+  height: 100%;
+}
+
+.element_controls{
+  position: absolute;
+  top: 0%;
+  right: 0;
+  width: 4rem;
+  height: 2rem;
 }
 
 .favourites_container {
