--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -10,7 +10,7 @@
   :root {
     --background_color: rgb(0, 0, 0);
     --text_color: rgb(255, 255, 255);
-    --accent-color: rgb(17, 0, 255);
+    --accent-color: rgb(0, 153, 255);
     --speaker_image: url('../img/sound-pngrepo-com.png');
     --inversion: invert(1);
   }
@@ -124,26 +124,37 @@ body {
   width: 95%;
   white-space: nowrap;
   font-size: Lexend_Deca;
+  cursor: pointer;
+}
+
+.history_element:hover .element_controls {
+  opacity: 1;
 }
 
 .element_title {
   position: absolute;
   box-sizing: border-box;
-  text-align: center;
+  text-align: auto;
+  line-height: auto;
   position: absolute;
   top: 0%;
   left: 0;
-  font-size: 1.1rem;
-  width: 100%;
-  height: 100%;
+  font-size: 1.5rem;
+  width: calc(100% - 4rem);
+  height: 2rem;
+  font-size: Lexend_Deca;
+  box-sizing: border-box;
+  padding-left: 1rem;
 }
 
 .element_controls {
+  /* favourtie and delete buttons */
   position: absolute;
   top: 0%;
   right: 0;
   width: 4rem;
   height: 2rem;
+  opacity: 0;
 }
 
 
@@ -178,7 +189,7 @@ body {
   width: 90vw;
   height: 3.5rem;
   left: 5vw;
-  background-color: rgb(0, 229, 255);
+  background-color: var(--accent-color);
   box-sizing: border-box;
   text-align: center;
   font-size: 1.7rem;
@@ -206,7 +217,6 @@ body {
   font-family: Lexend_Deca;
   width: calc(100% - 3.5rem);
   white-space: nowrap;
-  font-family: Lexend_Deca;
 }
 
 .speak_button_icon {
